fix(image): Zoomable image layout issues

--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -13,7 +13,7 @@ html {
 [data-rmiz-wrap="visible"], [data-rmiz-wrap="hidden"] {
   width: 100%;
   height: 100%;
-  display: block;
+  display: block !important;
 }
 
 body {
